# qontinui-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: init_database.py  sample_data.sql
docs/: expectations-schema.md
src/qontinui_mcp/: __init__.py  client.py  permissions.py  prompts.py  server.py
src/qontinui_mcp/database/: __init__.py  loader.py  schema.sql  search.py
src/qontinui_mcp/tools/: __init__.py  execution.py  expectations.py  generator.py
src/qontinui_mcp/types/: __init__.py  models.py
src/qontinui_mcp/utils/: __init__.py  validation.py
tests/: test_scenario_projection_tools.py  test_spec_check_tools.py
