[tool.poetry]
name = "qontinui-mcp"
version = "0.1.0"
description = "Lightweight MCP server for Qontinui Runner - enables AI-driven visual automation"
authors = ["Qontinui Team"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui-mcp"
repository = "https://github.com/qontinui/qontinui-mcp"
keywords = ["mcp", "automation", "ai", "visual-automation", "qontinui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "qontinui_mcp", from = "src"}]

[tool.poetry.scripts]
qontinui-mcp = "qontinui_mcp.server:run"

[tool.poetry.dependencies]
python = "^3.12"
mcp = "^1.0.0"
httpx = "^0.28.0"
qontinui-schemas = { path = "../qontinui-schemas", develop = true }

[tool.poetry.group.dev.dependencies]
black = "^24.10"
isort = "^7.0"
ruff = "^0.14"
mypy = "^1.14"
pytest = "^8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "../qontinui-schemas/src"
